# HiWi_Code

kitti_organized/: CMakeLists.txt
kitti_organized/include/: doVisualization.h  getPoseCloud.h  loadOxtsData.h  makeDir.h  organizePCloud.h
kitti_organized/src/: doVisualization.cpp  getPoseCloud.cpp  main.cpp  makeDir.cpp  organizePCloud.cpp  showHelp.cpp
kitti_plane/: CMakeLists.txt
kitti_plane/data/: 0000000001.pcd  0000000006.pcd  0000000007.pcd  0000000008.pcd  0000000009.pcd  0000000010.pcd  0000000011.pcd  0000000012.pcd  0000000014.pcd  0000000015.pcd  0000000016.pcd  0000000017.pcd  0000000018.pcd  0000000019.pcd  0000000020.pcd  0000000021.pcd  0000000022.pcd  0000000023.pcd  0000000024.pcd  0000000025.pcd  0000000026.pcd  0000000028.pcd  0000000029.pcd  0000000030.pcd  0000000031.pcd  0000000032.pcd  0000000033.pcd  0000000034.pcd  0000000035.pcd  0000000036.pcd  0000000037.pcd  0000000038.pcd  0000000039.pcd  0000000040.pcd  0000000041.pcd  0000000042.pcd  0000000043.pcd  0000000044.pcd  0000000045.pcd  0000000047.pcd  (+253 more)
kitti_plane/include/: convertOxtsToPose.h  doVisualization.h  findFiles.h  loadOxtsData.h  showHelp.h
kitti_plane/src/: .main.cpp.swp  .showHelp.cpp.swp  convertOxtsToPose.cpp  doVisualization.cpp  findFiles.cpp  main.cpp
